1999-03-16  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* FCall.m ([FCall -createEnd]): Pass correct number of arguments.
	([FCall -_performAction_:]): Pass correct offset of argument 
	values array.
	(init_javacall_tables): Get the jniEnv as an argument.

1999-03-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* FArguments.h (FArguments): Rename signature to javaSignature and 
	constify.  Rename signatureLength to javaSignatureLength.

	* FArguments.m (createJavaSignature): Constify return and make static.
	([FArguments -createEnd]): Use renamed version.

1999-03-16  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* FCall.m ([FCall -getArguments]): New method.

	* FCall.h: Add getArguments method.

1999-03-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (OBJCFLAGS): Append @CFLAGS_NOWARN_UNKNOWN_PRAGMAS@.
	(libdefobj_la_CPPFLAGS): Remove.

	* FArguments.h: Never include jni.h.
	(JOBJECT): Always define as VOID *.

	* FCall.m: Include jni.h if HAVE_JDK.

1999-03-15  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* Makefile.am (libdefobj_la_CPPFLAGS): Add 
	CFLAGS_NOWARN_UNKNOWN_PRAGMAS.
	Do not override CFLAGS nor OBJCFLAGS.
	
	* FCall.m: Hide jniEnv is JDK is not available.
	Hide JNI function tables if JDK is not available.
	(init_javacall_tables): Likewise.
	([FCall -createEnd]): Call fillHiddenArguments outside of the
	JDK dependent if block.

	* FCall.h: Hide init_javacalltables if JDK is not available. 

	* Makefile.am: Add CFLAGS_NOWARN_UNKNOWN_PRAGMAS to OBJCFLAGS and 
	CFLAGS to prevent unkown pragma warning while parsing jni.h.

	* FCall.h: Rename FCall fields with f prefix to avoid name clashes.

	* FCall.m: Likewise
	
	* Makefile.am (INCLUDES): Add FFIINCLUDES.

	* FCall.m: Remove extern from declaration of jniEnv.

	* FArguments.m: New file. FArguments is used for describing
	arguments passed to a foreign call and return value type

	* FArguments.h: New file. 

	* FCall.m: Separate FCall into FCall and FArguments. FCall